# serializer version: 1
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-event-hamming]
  shape: (10, 11)
  ┌─────┬─────────┬─────────┬─────────┬───┬─────────┬─────────┬─────────┬─────────┐
  │ id  ┆ 1       ┆ 2       ┆ 3       ┆ … ┆ 7       ┆ 8       ┆ 9       ┆ 10      │
  │ --- ┆ ---     ┆ ---     ┆ ---     ┆   ┆ ---     ┆ ---     ┆ ---     ┆ ---     │
  │ i64 ┆ f32     ┆ f32     ┆ f32     ┆   ┆ f32     ┆ f32     ┆ f32     ┆ f32     │
  ╞═════╪═════════╪═════════╪═════════╪═══╪═════════╪═════════╪═════════╪═════════╡
  │ 1   ┆ -5.498  ┆ -0.7217 ┆ -0.9274 ┆ … ┆ 2.3551  ┆ 1.4773  ┆ 0.2947  ┆ -0.9351 │
  │ 2   ┆ -0.7217 ┆ -4.6066 ┆ -0.0266 ┆ … ┆ 1.3082  ┆ 1.7155  ┆ -1.2971 ┆ -3.3243 │
  │ 3   ┆ -0.9274 ┆ -0.0266 ┆ -4.032  ┆ … ┆ -0.6656 ┆ -0.8559 ┆ 1.1549  ┆ 0.2747  │
  │ 4   ┆ -0.7334 ┆ -0.2498 ┆ -0.2482 ┆ … ┆ 1.1083  ┆ -0.6417 ┆ -0.5288 ┆ 2.5509  │
  │ 5   ┆ 1.2617  ┆ -1.6015 ┆ -0.0619 ┆ … ┆ 0.0732  ┆ 1.0161  ┆ -0.1502 ┆ -0.4863 │
  │ 6   ┆ 1.8974  ┆ 1.6308  ┆ 0.1232  ┆ … ┆ 0.5526  ┆ -0.7886 ┆ 0.8659  ┆ 1.5175  │
  │ 7   ┆ 2.3551  ┆ 1.3082  ┆ -0.6656 ┆ … ┆ -1.2681 ┆ 0.5526  ┆ 1.1083  ┆ 1.154   │
  │ 8   ┆ 1.4773  ┆ 1.7155  ┆ -0.8559 ┆ … ┆ 0.5526  ┆ -1.8268 ┆ 1.4964  ┆ 2.5863  │
  │ 9   ┆ 0.2947  ┆ -1.2971 ┆ 1.1549  ┆ … ┆ 1.1083  ┆ 1.4964  ┆ -1.9769 ┆ -0.1057 │
  │ 10  ┆ -0.9351 ┆ -3.3243 ┆ 0.2747  ┆ … ┆ 1.154   ┆ 2.5863  ┆ -0.1057 ┆ -6.9676 │
  └─────┴─────────┴─────────┴─────────┴───┴─────────┴─────────┴─────────┴─────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-interval-hamming]
  shape: (10, 11)
  ┌─────┬─────────┬─────────┬─────────┬───┬─────────┬─────────┬─────────┬─────────┐
  │ id  ┆ 1       ┆ 2       ┆ 3       ┆ … ┆ 7       ┆ 8       ┆ 9       ┆ 10      │
  │ --- ┆ ---     ┆ ---     ┆ ---     ┆   ┆ ---     ┆ ---     ┆ ---     ┆ ---     │
  │ i64 ┆ f32     ┆ f32     ┆ f32     ┆   ┆ f32     ┆ f32     ┆ f32     ┆ f32     │
  ╞═════╪═════════╪═════════╪═════════╪═══╪═════════╪═════════╪═════════╪═════════╡
  │ 1   ┆ -5.498  ┆ -0.7217 ┆ -0.9274 ┆ … ┆ 2.3551  ┆ 1.4773  ┆ 0.2947  ┆ -0.9351 │
  │ 2   ┆ -0.7217 ┆ -4.6066 ┆ -0.0266 ┆ … ┆ 1.3082  ┆ 1.7155  ┆ -1.2971 ┆ -3.3243 │
  │ 3   ┆ -0.9274 ┆ -0.0266 ┆ -4.032  ┆ … ┆ -0.6656 ┆ -0.8559 ┆ 1.1549  ┆ 0.2747  │
  │ 4   ┆ -0.7334 ┆ -0.2498 ┆ -0.2482 ┆ … ┆ 1.1083  ┆ -0.6417 ┆ -0.5288 ┆ 2.5509  │
  │ 5   ┆ 1.2617  ┆ -1.6015 ┆ -0.0619 ┆ … ┆ 0.0732  ┆ 1.0161  ┆ -0.1502 ┆ -0.4863 │
  │ 6   ┆ 1.8974  ┆ 1.6308  ┆ 0.1232  ┆ … ┆ 0.5526  ┆ -0.7886 ┆ 0.8659  ┆ 1.5175  │
  │ 7   ┆ 2.3551  ┆ 1.3082  ┆ -0.6656 ┆ … ┆ -1.2681 ┆ 0.5526  ┆ 1.1083  ┆ 1.154   │
  │ 8   ┆ 1.4773  ┆ 1.7155  ┆ -0.8559 ┆ … ┆ 0.5526  ┆ -1.8268 ┆ 1.4964  ┆ 2.5863  │
  │ 9   ┆ 0.2947  ┆ -1.2971 ┆ 1.1549  ┆ … ┆ 1.1083  ┆ 1.4964  ┆ -1.9769 ┆ -0.1057 │
  │ 10  ┆ -0.9351 ┆ -3.3243 ┆ 0.2747  ┆ … ┆ 1.154   ┆ 2.5863  ┆ -0.1057 ┆ -6.9676 │
  └─────┴─────────┴─────────┴─────────┴───┴─────────┴─────────┴─────────┴─────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-state-hamming]
  shape: (10, 11)
  ┌─────┬─────────┬─────────┬─────────┬───┬─────────┬─────────┬─────────┬─────────┐
  │ id  ┆ 1       ┆ 2       ┆ 3       ┆ … ┆ 7       ┆ 8       ┆ 9       ┆ 10      │
  │ --- ┆ ---     ┆ ---     ┆ ---     ┆   ┆ ---     ┆ ---     ┆ ---     ┆ ---     │
  │ i64 ┆ f32     ┆ f32     ┆ f32     ┆   ┆ f32     ┆ f32     ┆ f32     ┆ f32     │
  ╞═════╪═════════╪═════════╪═════════╪═══╪═════════╪═════════╪═════════╪═════════╡
  │ 1   ┆ -5.498  ┆ -0.7217 ┆ -0.9274 ┆ … ┆ 2.3551  ┆ 1.4773  ┆ 0.2947  ┆ -0.9351 │
  │ 2   ┆ -0.7217 ┆ -4.6066 ┆ -0.0266 ┆ … ┆ 1.3082  ┆ 1.7155  ┆ -1.2971 ┆ -3.3243 │
  │ 3   ┆ -0.9274 ┆ -0.0266 ┆ -4.032  ┆ … ┆ -0.6656 ┆ -0.8559 ┆ 1.1549  ┆ 0.2747  │
  │ 4   ┆ -0.7334 ┆ -0.2498 ┆ -0.2482 ┆ … ┆ 1.1083  ┆ -0.6417 ┆ -0.5288 ┆ 2.5509  │
  │ 5   ┆ 1.2617  ┆ -1.6015 ┆ -0.0619 ┆ … ┆ 0.0732  ┆ 1.0161  ┆ -0.1502 ┆ -0.4863 │
  │ 6   ┆ 1.8974  ┆ 1.6308  ┆ 0.1232  ┆ … ┆ 0.5526  ┆ -0.7886 ┆ 0.8659  ┆ 1.5175  │
  │ 7   ┆ 2.3551  ┆ 1.3082  ┆ -0.6656 ┆ … ┆ -1.2681 ┆ 0.5526  ┆ 1.1083  ┆ 1.154   │
  │ 8   ┆ 1.4773  ┆ 1.7155  ┆ -0.8559 ┆ … ┆ 0.5526  ┆ -1.8268 ┆ 1.4964  ┆ 2.5863  │
  │ 9   ┆ 0.2947  ┆ -1.2971 ┆ 1.1549  ┆ … ┆ 1.1083  ┆ 1.4964  ┆ -1.9769 ┆ -0.1057 │
  │ 10  ┆ -0.9351 ┆ -3.3243 ┆ 0.2747  ┆ … ┆ 1.154   ┆ 2.5863  ┆ -0.1057 ┆ -6.9676 │
  └─────┴─────────┴─────────┴─────────┴───┴─────────┴─────────┴─────────┴─────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-event-hamming]
  shape: (10, 11)
  ┌─────┬─────────┬─────────┬─────────┬───┬─────────┬─────────┬─────────┬─────────┐
  │ id  ┆ 1       ┆ 2       ┆ 3       ┆ … ┆ 7       ┆ 8       ┆ 9       ┆ 10      │
  │ --- ┆ ---     ┆ ---     ┆ ---     ┆   ┆ ---     ┆ ---     ┆ ---     ┆ ---     │
  │ i64 ┆ f32     ┆ f32     ┆ f32     ┆   ┆ f32     ┆ f32     ┆ f32     ┆ f32     │
  ╞═════╪═════════╪═════════╪═════════╪═══╪═════════╪═════════╪═════════╪═════════╡
  │ 1   ┆ -6.2132 ┆ 0.0592  ┆ -0.2545 ┆ … ┆ 3.0224  ┆ 3.2709  ┆ -0.8588 ┆ -2.7346 │
  │ 2   ┆ 0.0592  ┆ -4.0605 ┆ -0.7396 ┆ … ┆ -0.7048 ┆ 0.5908  ┆ -1.0683 ┆ -1.0492 │
  │ 3   ┆ -0.2545 ┆ -0.7396 ┆ -4.0817 ┆ … ┆ 1.6304  ┆ 1.6093  ┆ 1.248   ┆ -1.2068 │
  │ 4   ┆ 0.9389  ┆ -0.3894 ┆ -1.1677 ┆ … ┆ 1.8289  ┆ 1.8027  ┆ -0.0688 ┆ 1.1595  │
  │ 5   ┆ -0.032  ┆ 0.7233  ┆ -0.0413 ┆ … ┆ 1.8289  ┆ 0.248   ┆ 0.462   ┆ -0.7901 │
  │ 6   ┆ 1.0624  ┆ 2.2793  ┆ 0.2345  ┆ … ┆ 1.6089  ┆ 0.5526  ┆ 0.4116  ┆ 1.0515  │
  │ 7   ┆ 3.0224  ┆ -0.7048 ┆ 1.6304  ┆ … ┆ -2.5649 ┆ -1.2625 ┆ -0.7779 ┆ 2.3038  │
  │ 8   ┆ 3.2709  ┆ 0.5908  ┆ 1.6093  ┆ … ┆ -1.2625 ┆ -1.8268 ┆ 0.2622  ┆ 1.5454  │
  │ 9   ┆ -0.8588 ┆ -1.0683 ┆ 1.248   ┆ … ┆ -0.7779 ┆ 0.2622  ┆ -2.5735 ┆ 0.6614  │
  │ 10  ┆ -2.7346 ┆ -1.0492 ┆ -1.2068 ┆ … ┆ 2.3038  ┆ 1.5454  ┆ 0.6614  ┆ -5.3914 │
  └─────┴─────────┴─────────┴─────────┴───┴─────────┴─────────┴─────────┴─────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-interval-hamming]
  shape: (10, 11)
  ┌─────┬─────────┬─────────┬─────────┬───┬─────────┬─────────┬─────────┬─────────┐
  │ id  ┆ 1       ┆ 2       ┆ 3       ┆ … ┆ 7       ┆ 8       ┆ 9       ┆ 10      │
  │ --- ┆ ---     ┆ ---     ┆ ---     ┆   ┆ ---     ┆ ---     ┆ ---     ┆ ---     │
  │ i64 ┆ f32     ┆ f32     ┆ f32     ┆   ┆ f32     ┆ f32     ┆ f32     ┆ f32     │
  ╞═════╪═════════╪═════════╪═════════╪═══╪═════════╪═════════╪═════════╪═════════╡
  │ 1   ┆ -6.2132 ┆ 0.0592  ┆ -0.2545 ┆ … ┆ 3.0224  ┆ 3.2709  ┆ -0.8588 ┆ -2.7346 │
  │ 2   ┆ 0.0592  ┆ -4.0605 ┆ -0.7396 ┆ … ┆ -0.7048 ┆ 0.5908  ┆ -1.0683 ┆ -1.0492 │
  │ 3   ┆ -0.2545 ┆ -0.7396 ┆ -4.0817 ┆ … ┆ 1.6304  ┆ 1.6093  ┆ 1.248   ┆ -1.2068 │
  │ 4   ┆ 0.9389  ┆ -0.3894 ┆ -1.1677 ┆ … ┆ 1.8289  ┆ 1.8027  ┆ -0.0688 ┆ 1.1595  │
  │ 5   ┆ -0.032  ┆ 0.7233  ┆ -0.0413 ┆ … ┆ 1.8289  ┆ 0.248   ┆ 0.462   ┆ -0.7901 │
  │ 6   ┆ 1.0624  ┆ 2.2793  ┆ 0.2345  ┆ … ┆ 1.6089  ┆ 0.5526  ┆ 0.4116  ┆ 1.0515  │
  │ 7   ┆ 3.0224  ┆ -0.7048 ┆ 1.6304  ┆ … ┆ -2.5649 ┆ -1.2625 ┆ -0.7779 ┆ 2.3038  │
  │ 8   ┆ 3.2709  ┆ 0.5908  ┆ 1.6093  ┆ … ┆ -1.2625 ┆ -1.8268 ┆ 0.2622  ┆ 1.5454  │
  │ 9   ┆ -0.8588 ┆ -1.0683 ┆ 1.248   ┆ … ┆ -0.7779 ┆ 0.2622  ┆ -2.5735 ┆ 0.6614  │
  │ 10  ┆ -2.7346 ┆ -1.0492 ┆ -1.2068 ┆ … ┆ 2.3038  ┆ 1.5454  ┆ 0.6614  ┆ -5.3914 │
  └─────┴─────────┴─────────┴─────────┴───┴─────────┴─────────┴─────────┴─────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-state-hamming]
  shape: (10, 11)
  ┌─────┬─────────┬─────────┬─────────┬───┬─────────┬─────────┬─────────┬─────────┐
  │ id  ┆ 1       ┆ 2       ┆ 3       ┆ … ┆ 7       ┆ 8       ┆ 9       ┆ 10      │
  │ --- ┆ ---     ┆ ---     ┆ ---     ┆   ┆ ---     ┆ ---     ┆ ---     ┆ ---     │
  │ i64 ┆ f32     ┆ f32     ┆ f32     ┆   ┆ f32     ┆ f32     ┆ f32     ┆ f32     │
  ╞═════╪═════════╪═════════╪═════════╪═══╪═════════╪═════════╪═════════╪═════════╡
  │ 1   ┆ -6.2132 ┆ 0.0592  ┆ -0.2545 ┆ … ┆ 3.0224  ┆ 3.2709  ┆ -0.8588 ┆ -2.7346 │
  │ 2   ┆ 0.0592  ┆ -4.0605 ┆ -0.7396 ┆ … ┆ -0.7048 ┆ 0.5908  ┆ -1.0683 ┆ -1.0492 │
  │ 3   ┆ -0.2545 ┆ -0.7396 ┆ -4.0817 ┆ … ┆ 1.6304  ┆ 1.6093  ┆ 1.248   ┆ -1.2068 │
  │ 4   ┆ 0.9389  ┆ -0.3894 ┆ -1.1677 ┆ … ┆ 1.8289  ┆ 1.8027  ┆ -0.0688 ┆ 1.1595  │
  │ 5   ┆ -0.032  ┆ 0.7233  ┆ -0.0413 ┆ … ┆ 1.8289  ┆ 0.248   ┆ 0.462   ┆ -0.7901 │
  │ 6   ┆ 1.0624  ┆ 2.2793  ┆ 0.2345  ┆ … ┆ 1.6089  ┆ 0.5526  ┆ 0.4116  ┆ 1.0515  │
  │ 7   ┆ 3.0224  ┆ -0.7048 ┆ 1.6304  ┆ … ┆ -2.5649 ┆ -1.2625 ┆ -0.7779 ┆ 2.3038  │
  │ 8   ┆ 3.2709  ┆ 0.5908  ┆ 1.6093  ┆ … ┆ -1.2625 ┆ -1.8268 ┆ 0.2622  ┆ 1.5454  │
  │ 9   ┆ -0.8588 ┆ -1.0683 ┆ 1.248   ┆ … ┆ -0.7779 ┆ 0.2622  ┆ -2.5735 ┆ 0.6614  │
  │ 10  ┆ -2.7346 ┆ -1.0492 ┆ -1.2068 ┆ … ┆ 2.3038  ┆ 1.5454  ┆ 0.6614  ┆ -5.3914 │
  └─────┴─────────┴─────────┴─────────┴───┴─────────┴─────────┴─────────┴─────────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[event-hamming]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬─────────┬─────────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1   ┆ seq_2   │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---     │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32     ┆ f32     │
  ╞═════════╪═════════╪═════════╪═════════╪═════════╪═════════╡
  │ empty_1 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     │
  │ empty_2 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     │
  │ empty_3 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     │
  │ seq_1   ┆ NaN     ┆ NaN     ┆ NaN     ┆ -0.5514 ┆ -0.1326 │
  │ seq_2   ┆ NaN     ┆ NaN     ┆ NaN     ┆ -0.1326 ┆ -1.2188 │
  └─────────┴─────────┴─────────┴─────────┴─────────┴─────────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[interval-hamming]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬─────────┬─────────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1   ┆ seq_2   │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---     │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32     ┆ f32     │
  ╞═════════╪═════════╪═════════╪═════════╪═════════╪═════════╡
  │ empty_1 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     │
  │ empty_2 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     │
  │ empty_3 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     │
  │ seq_1   ┆ NaN     ┆ NaN     ┆ NaN     ┆ -0.5514 ┆ -0.1326 │
  │ seq_2   ┆ NaN     ┆ NaN     ┆ NaN     ┆ -0.1326 ┆ -1.2188 │
  └─────────┴─────────┴─────────┴─────────┴─────────┴─────────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[state-hamming]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬─────────┬─────────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1   ┆ seq_2   │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---     │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32     ┆ f32     │
  ╞═════════╪═════════╪═════════╪═════════╪═════════╪═════════╡
  │ empty_1 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     │
  │ empty_2 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     │
  │ empty_3 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     │
  │ seq_1   ┆ NaN     ┆ NaN     ┆ NaN     ┆ -0.5514 ┆ -0.1326 │
  │ seq_2   ┆ NaN     ┆ NaN     ┆ NaN     ┆ -0.1326 ┆ -1.2188 │
  └─────────┴─────────┴─────────┴─────────┴─────────┴─────────┘
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[datetime-event-hamming]
  -0.7217
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[datetime-interval-hamming]
  -0.7217
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[datetime-state-hamming]
  -0.7217
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[timestep-event-hamming]
  0.0592
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[timestep-interval-hamming]
  0.0592
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[timestep-state-hamming]
  0.0592
# ---
# name: TestSinglePair.test_same_sequence_snapshot[datetime-event-hamming]
  -5.498
# ---
# name: TestSinglePair.test_same_sequence_snapshot[datetime-interval-hamming]
  -5.498
# ---
# name: TestSinglePair.test_same_sequence_snapshot[datetime-state-hamming]
  -5.498
# ---
# name: TestSinglePair.test_same_sequence_snapshot[timestep-event-hamming]
  -6.2132
# ---
# name: TestSinglePair.test_same_sequence_snapshot[timestep-interval-hamming]
  -6.2132
# ---
# name: TestSinglePair.test_same_sequence_snapshot[timestep-state-hamming]
  -6.2132
# ---
